# pghaicker

./: MANIFEST.in  Makefile  README.md  pghacksumm.sh  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/pghaicker/: cli.py
tests/: test_basic.py  test_cli.py
