[project]
name = "pghaicker"
dynamic = ["version"]
description = "AI Assistant for Postgres Hackers"
authors = [{ name = "Florents Tselai", email = "florents.tselai@gmail.com" }]
license = "MIT"
dependencies = [
    "google-genai",
    "pypandoc"
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "pytest",
    "black"
]

[tool.setuptools.dynamic]
version = {attr = "pghaicker.__version__"}

[project.scripts]
pghaicker = "pghaicker.cli:cli"

[project.urls]
Homepage = "https://github.com/Florents-Tselai/pghaicker"
Repository = "https://github.com/Florents-Tselai/pghaicker"
Issues = "https://github.com/Florents-Tselai/pghaicker/issues"
Changelog = "https://github.com/Florents-Tselai/pghaicker/releases"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"